--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
         <div class="igus-logo">igus</div>
         <h1>Ready to discover the power of plastic?</h1>
         <h2>We’re packing up and hitting the road to show the country first hand the benefits of our plastic bearings, high-flex cables, and cable carriers. Interested in having the show come to you? Request a stop!</h2>
-    </div>
+        <form>
+          <input type="text" placeholder="First name" class="two-column" />
+          <input type="text" placeholder="Last name" class="two-column" />
+          <br />
+          <input type="text" placeholder="Email address" class="two-column" />
+          <input type="text" placeholder="Company name" class="two-column" />
+          <br />
+          <input type="text" placeholder="Phone number" class="two-column" />
+          <input type="text" placeholder="Preferred date" class="two-column" />
+          <br />
+          <input type="text" placeholder="Street address" />
+          <br />
+          <input type="text" placeholder="City" class="two-column" />
+          <input type="text" placeholder="State" class="two-column" />
+          <br />
+          <input type="submit" value="Submit">
+        </form>
+      </div>
+      <div class="top-right-content">
+        <img src="img/box_transparent.png" />
   </body>
 </html>
