--- a/index.html
+++ b/index.html
@@ -1,35 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>igus Traveling Tradeshow</title>
-    <link rel="stylesheet" type="text/css" href="tts.css">
-  </head>
-  <body>
-    <div class="container">
-      <div class="top-left-content">
-        <div class="igus-logo">igus</div>
-        <h1>Ready to discover the power of plastic?</h1>
-        <h2>We’re packing up and hitting the road to show the country first hand the benefits of our plastic bearings, high-flex cables, and cable carriers. Interested in having the show come to you? Request a stop!</h2>
-        <form>
-          <input type="text" placeholder="First name" class="two-column" />
-          <input type="text" placeholder="Last name" class="two-column" />
-          <br />
-          <input type="text" placeholder="Email address" class="two-column" />
-          <input type="text" placeholder="Company name" class="two-column" />
-          <br />
-          <input type="text" placeholder="Phone number" class="two-column" />
-          <input type="text" placeholder="Preferred date" class="two-column" />
-          <br />
-          <input type="text" placeholder="Street address" />
-          <br />
-          <input type="text" placeholder="City" class="two-column" />
-          <input type="text" placeholder="State" class="two-column" />
-          <br />
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-      <div class="top-right-content">
-        <img src="img/box_transparent.png" />
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>igus Traveling Tradeshow</title>
+  <link rel="stylesheet" type="text/css" href="tts.css">
+</head>
+
+<body>
+  <div class="container">
+    <div class="nav">
+      <div class="about float-left">About</div>
+      <div class="tour-stops float-left">Tour Stops</div>
+      <div class="products float-left">Products</div>
+      <div class="contact float-left">Contact</div>
+    </div>
+    <div class="top-left-content">
+      <img src="img/iguslogo.png" />
+      <h1>Ready to discover the power of plastic?</h1>
+      <h2>We’re packing up and hitting the road to show the country first hand the benefits of our plastic bearings, high-flex cables, and cable carriers. Interested in having the show come to you? Request a stop!</h2>
+      <form>
+        <input type="text" placeholder="First name" class="two-column" />
+        <input type="text" placeholder="Last name" class="two-column" />
+        <br />
+        <input type="text" placeholder="Email address" class="two-column" />
+        <input type="text" placeholder="Company name" class="two-column" />
+        <br />
+        <input type="text" placeholder="Phone number" class="two-column" />
+        <input type="text" placeholder="Preferred date" class="two-column" />
+        <br />
+        <input type="text" placeholder="Street address" class="one-column" />
+        <br />
+        <input type="text" placeholder="City" class="two-column" />
+        <input type="text" placeholder="State" class="two-column" />
+        <br />
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+    <div class="top-right-content">
+      <img src="img/box_transparent.png" />
+    </div>
+  </div>
+  <svg class="orangebg" width="1800px" height="1116px" viewBox="0 0 1800 1116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+        <linearGradient x1="100%" y1="50%" x2="0%" y2="50%" id="linearGradient-1">
+            <stop stop-color="#FF7500" offset="0%"></stop>
+            <stop stop-color="#FFBA80" offset="100%"></stop>
+        </linearGradient>
+    </defs>
+    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g transform="translate(0.000000, -312.000000)" fill="url(#linearGradient-1)">
+            <g transform="translate(0.000000, 84.000000)">
+                <path d="M0,513.405954 C363.564269,412.464767 646.639088,361.994174 849.224458,361.994174 C1051.80983,361.994174 1368.73501,317.329449 1800,228 C1800,860 1800,1176 1800,1176 C1800,1176 1508,1227 849.691576,1264.69545 C683.890856,1274.18938 400.660331,1300.62423 0,1344 L0,513.405954 Z" id="Path-2"></path>
+            </g>
+        </g>
+    </g>
+  </svg>
+
+</body>
+
 </html>
