--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
     <div class="top-right-content">
       <img src="img/box_transparent.png" />
     </div>
+    <div class="middle-left-content">
+      <img src="img/video_placeholder.png" />
+      <div id="circle1" class="float-left"></div>
+      <div id="circle2" class="float-left"></div>
+    </div>
+    <div class="middle-right-content">
+      <h3>What is the igus traveling tradeshow?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
   </div>
   <svg class="orangebg" width="1800px" height="1116px" viewBox="0 0 1800 1116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
@@ -56,7 +66,6 @@
         </g>
     </g>
   </svg>
-
 </body>
 
 </html>
