--- a/index.html
+++ b/index.html
@@ -50,7 +50,80 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
+    <div class="map">
+        <center><img src="img/map_placeholder.png" /></center>
+        <p>Traveling Tradeshow Stops</p>
+        <table class="tour-dates">
+          <tbody>
+            <tr>
+              <td>7/2 - 7/8: Providence, RI</td>
+              <td width="15%"></td>
+              <td>7/2 - 7/8: Detroit, MI</td>
+            </tr>
+            <tr>
+              <td>7/2 - 7/8: New York City, NY</td>
+              <td></td>
+              <td>7/2 - 7/8: Frankfurt, KY</td>
+            </tr>
+            <tr>
+              <td>7/2 - 7/8: Pittsburg, PA</td>
+              <td></td>
+              <td>7/2 - 7/8: Houston, TX</td>
+            </tr>
+            <tr>
+              <td>7/2 - 7/8: Chicago, IL</td>
+              <td></td>
+              <td>7/2 - 7/8: Dallas, TX</td>
+            </tr>
+            <tr>
+              <td>7/2 - 7/8: Minneapolis, MN</td>
+              <td></td>
+              <td>7/2 - 7/8: Phoenix, AZ</td>
+            </tr>
+            <tr>
+              <td>7/2 - 7/8: Maddison, WC</td>
+              <td></td>
+              <td><strong>Fall 2018 - TBD</strong></td>
+            </tr>
+            <tr>
+              <td>7/2 - 7/8: Landsing, MI</td>
+              <td></td>
+              <td>Request a stop</td>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+    <div class="van">
+      <img src="img/van.png" />
+    </div>
+    <div class="tiles">
+      <div class="e-chain tile">
+        <img src="" />
+        <h4>enery chains</h4>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p class="cta">Learn more</p>
+      </div>
+      <div class="chainflex tile">
+        <img src="" />
+        <h4>chainflex cables</h4>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p class="cta">Learn more</p>
+      </div>
+      <div class="drylin tile">
+        <img src="" />
+        <h4>drylin linear guides</h4>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p class="cta">Learn more</p>
+      </div>
+      <div class="iglide tile">
+        <img src="" />
+        <h4>iglide bearings</h4>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p class="cta">Learn more</p>
+      </div>
+    </div>
   </div>
+
   <svg class="orangebg" width="1800px" height="1116px" viewBox="0 0 1800 1116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
         <linearGradient x1="100%" y1="50%" x2="0%" y2="50%" id="linearGradient-1">
@@ -65,6 +138,25 @@
             </g>
         </g>
     </g>
+  </svg>
+
+
+  <svg class="orangebg-2"width="1800px" height="687px" viewBox="0 0 1800 687" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+      <!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
+      <desc>Created with Sketch.</desc>
+      <defs>
+          <linearGradient x1="-6.92675159%" y1="118.098209%" x2="88.933121%" y2="3.46675311%" id="linearGradient-1">
+              <stop stop-color="#FF7000" offset="0%"></stop>
+              <stop stop-color="#FFBA80" offset="100%"></stop>
+          </linearGradient>
+      </defs>
+      <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+          <g id="Artboard-Copy-5" transform="translate(0.000000, -2143.000000)" fill="url(#linearGradient-1)">
+              <g id="Blue-background" transform="translate(-166.000000, 85.000000)">
+                  <path d="M1006,2061 C1192,2070.09346 1362,2082.08822 1470,2082.08822 C1542,2082.08822 1707.33333,2079.42233 1966,2074.09055 L1966,2641 C1778.66667,2645.66667 1629.33333,2651.66667 1518,2659 C1191.76858,2680.4883 1012,2713 925,2722 C784.421966,2736.54256 531.421966,2744.20922 166,2745 L166,2082.08822 C497,2068.49767 820,2051.90654 1006,2061 Z" id="Path-5"></path>
+              </g>
+          </g>
+      </g>
   </svg>
 </body>
 
