--- a/index.html
+++ b/index.html
@@ -96,29 +96,33 @@
     <div class="van">
       <img src="img/van.png" />
     </div>
+    <div class="tile-intro">
+      <h3>Wondering what we're bringing on the tradeshow?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
     <div class="tiles">
-      <div class="e-chain tile">
-        <img src="" />
+      <div class="e-chain tile float-left">
+        <center><img src="img/echain_tile.png" /></center>
         <h4>enery chains</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
         <p class="cta">Learn more</p>
       </div>
-      <div class="chainflex tile">
-        <img src="" />
+      <div class="chainflex tile float-left">
+        <center><img src="img/chainflex_tile.png" /></center>
         <h4>chainflex cables</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
         <p class="cta">Learn more</p>
       </div>
-      <div class="drylin tile">
-        <img src="" />
+      <div class="drylin tile float-left">
+        <center><img src="img/drylin_tile.png" /></center>
         <h4>drylin linear guides</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
         <p class="cta">Learn more</p>
       </div>
-      <div class="iglide tile">
-        <img src="" />
+      <div class="iglide tile float-left">
+        <center><img src="img/iglide_tile.png" /></center>
         <h4>iglide bearings</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore </p>
+        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
         <p class="cta">Learn more</p>
       </div>
     </div>
