sending over to copywriter

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <div class="map">
+      <h3>We're coming to a city near you!</h3>
         <center><img src="img/map_placeholder.png" /></center>
         <p>Traveling Tradeshow Stops</p>
         <table class="tour-dates">
@@ -125,6 +126,27 @@
         <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
         <p class="cta">Learn more</p>
       </div>
+    </div>
+    <div class="bottom-form">
+      <h3>Interested in the tradeshow coming to you?</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <form>
+        <input type="text" placeholder="First name" class="two-column" />
+        <input type="text" placeholder="Last name" class="two-column" />
+        <br />
+        <input type="text" placeholder="Email address" class="two-column" />
+        <input type="text" placeholder="Company name" class="two-column" />
+        <br />
+        <input type="text" placeholder="Phone number" class="two-column" />
+        <input type="text" placeholder="Preferred date" class="two-column" />
+        <br />
+        <input type="text" placeholder="Street address" class="one-column" />
+        <br />
+        <input type="text" placeholder="City" class="two-column" />
+        <input type="text" placeholder="State" class="two-column" />
+        <br />
+        <input type="submit" value="Submit">
+      </form>
     </div>
   </div>
 
