--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <tr>
               <td>7/2 - 7/8: Landsing, MI</td>
               <td></td>
-              <td>Request a stop</td>
+              <td class="cta">Request a stop</td>
             </tr>
           </tbody>
         </table>
@@ -150,7 +150,7 @@
     </div>
   </div>
 
-  <svg class="orangebg" width="1800px" height="1116px" viewBox="0 0 1800 1116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg class="orangebg" preserveAspectRatio="none" width="1800px" height="1116px" viewBox="0 0 1800 1116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
         <linearGradient x1="100%" y1="50%" x2="0%" y2="50%" id="linearGradient-1">
             <stop stop-color="#FF7500" offset="0%"></stop>
@@ -167,7 +167,7 @@
   </svg>
 
 
-  <svg class="orangebg-2"width="1800px" height="687px" viewBox="0 0 1800 687" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <svg class="orangebg-2" preserveAspectRatio="none" width="1800px" height="687px" viewBox="0 0 1800 687" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
       <desc>Created with Sketch.</desc>
       <defs>
