--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <tbody>
             <tr>
               <td>7/2 - 7/8: Providence, RI</td>
-              <td width="15%"></td>
+              <td class="middle-column"></td>
               <td>7/2 - 7/8: Detroit, MI</td>
             </tr>
             <tr>
