--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>igus Traveling Tradeshow</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="tts.js"></script>
   <link rel="stylesheet" type="text/css" href="tts.css">
 </head>
 
@@ -42,7 +44,7 @@
       <img src="img/box_transparent.png" />
     </div>
     <div class="middle-left-content">
-      <img src="img/video_placeholder.png" />
+      <img src="img/video_placeholder.png" class="video" />
       <div id="circle1" class="float-left"></div>
       <div id="circle2" class="float-left"></div>
     </div>
@@ -169,8 +171,6 @@
 
 
   <svg class="orangebg-2" preserveAspectRatio="none" width="1800px" height="687px" viewBox="0 0 1800 687" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-      <!-- Generator: Sketch 50.2 (55047) - http://www.bohemiancoding.com/sketch -->
-      <desc>Created with Sketch.</desc>
       <defs>
           <linearGradient x1="-6.92675159%" y1="118.098209%" x2="88.933121%" y2="3.46675311%" id="linearGradient-1">
               <stop stop-color="#FF7000" offset="0%"></stop>
@@ -185,6 +185,10 @@
           </g>
       </g>
   </svg>
+
+<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 </body>
 
 </html>
