--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <div class="map">
       <h3>We're coming to a city near you!</h3>
         <center><img src="img/map_placeholder.png" /></center>
-        <p>Traveling Tradeshow Stops</p>
+        <p class="trigger">Traveling Tradeshow Stops</p>
         <table class="tour-dates">
           <tbody>
             <tr>
@@ -187,8 +187,8 @@
   </svg>
 
 <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 
+</body>
 </html>
