A bit more code cleanup

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -9,7 +8,6 @@
   <script src="tts.js"></script>
   <link rel="stylesheet" type="text/css" href="tts.css">
 </head>
-
 <body>
   <div class="container">
     <div class="nav">
@@ -55,54 +53,55 @@
     </div>
     <div class="map">
       <h3>We're coming to a city near you!</h3>
-        <center><img src="img/map_placeholder.png" /></center>
-        <p class="trigger">Traveling Tradeshow Stops</p>
-        <table class="tour-dates">
-          <tbody>
-            <tr>
-              <td>7/2 - 7/8: Providence, RI</td>
-              <td class="middle-column"></td>
-              <td>7/2 - 7/8: Detroit, MI</td>
-            </tr>
-            <tr>
-              <td>7/2 - 7/8: New York City, NY</td>
-              <td></td>
-              <td>7/2 - 7/8: Frankfurt, KY</td>
-            </tr>
-            <tr>
-              <td>7/2 - 7/8: Pittsburg, PA</td>
-              <td></td>
-              <td>7/2 - 7/8: Houston, TX</td>
-            </tr>
-            <tr>
-              <td>7/2 - 7/8: Chicago, IL</td>
-              <td></td>
-              <td>7/2 - 7/8: Dallas, TX</td>
-            </tr>
-            <tr>
-              <td>7/2 - 7/8: Minneapolis, MN</td>
-              <td></td>
-              <td>7/2 - 7/8: Phoenix, AZ</td>
-            </tr>
-            <tr>
-              <td>7/2 - 7/8: Maddison, WC</td>
-              <td></td>
-              <td><strong>Fall 2018 - TBD</strong></td>
-            </tr>
-            <tr>
-              <td>7/2 - 7/8: Landsing, MI</td>
-              <td></td>
-              <td class="cta">Request a stop</td>
-            </tr>
-          </tbody>
-        </table>
+      <center><img src="img/map_placeholder.png" /></center>
+      <p class="trigger">Traveling Tradeshow Stops</p>
+      <table class="tour-dates">
+        <tbody>
+          <tr>
+            <td>7/2 - 7/8: Providence, RI</td>
+            <td class="middle-column"></td>
+            <td>7/2 - 7/8: Detroit, MI</td>
+          </tr>
+          <tr>
+            <td>7/2 - 7/8: New York City, NY</td>
+            <td></td>
+            <td>7/2 - 7/8: Frankfurt, KY</td>
+          </tr>
+          <tr>
+            <td>7/2 - 7/8: Pittsburg, PA</td>
+            <td></td>
+            <td>7/2 - 7/8: Houston, TX</td>
+          </tr>
+          <tr>
+            <td>7/2 - 7/8: Chicago, IL</td>
+            <td></td>
+            <td>7/2 - 7/8: Dallas, TX</td>
+          </tr>
+          <tr>
+            <td>7/2 - 7/8: Minneapolis, MN</td>
+            <td></td>
+            <td>7/2 - 7/8: Phoenix, AZ</td>
+          </tr>
+          <tr>
+            <td>7/2 - 7/8: Maddison, WC</td>
+            <td></td>
+            <td><strong>Fall 2018 - TBD</strong></td>
+          </tr>
+          <tr>
+            <td>7/2 - 7/8: Landsing, MI</td>
+            <td></td>
+            <td class="cta">Request a stop</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <div class="van">
       <img src="img/van.png" />
     </div>
     <div class="tile-intro">
       <h3>Wondering what we're bringing on the tradeshow?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
+        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <div class="tiles">
       <div class="e-chain tile float-left">
@@ -132,7 +131,8 @@
     </div>
     <div class="bottom-form">
       <h3>Interested in the tradeshow coming to you?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.</p>
       <form>
         <input type="text" placeholder="First name" class="two-column" />
         <input type="text" placeholder="Last name" class="two-column" />
@@ -152,7 +152,6 @@
       </form>
     </div>
   </div>
-
   <svg class="orangebg" preserveAspectRatio="none" width="1800px" height="1116px" viewBox="0 0 1800 1116" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <defs>
         <linearGradient x1="100%" y1="50%" x2="0%" y2="50%" id="linearGradient-1">
@@ -168,8 +167,6 @@
         </g>
     </g>
   </svg>
-
-
   <svg class="orangebg-2" preserveAspectRatio="none" width="1800px" height="687px" viewBox="0 0 1800 687" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
       <defs>
           <linearGradient x1="-6.92675159%" y1="118.098209%" x2="88.933121%" y2="3.46675311%" id="linearGradient-1">
@@ -185,10 +182,8 @@
           </g>
       </g>
   </svg>
-
-<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 </body>
 </html>
