files didn't commit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="top-left-content">
       <img src="img/iguslogo.png" />
       <h1>Ready to discover the power of plastic?</h1>
-      <h2>We’re packing up and hitting the road to show the country first hand the benefits of our plastic bearings, high-flex cables, and cable carriers. Interested in having the show come to you? Request a stop!</h2>
+      <h2>We’re packing up and hitting the road to show the country the benefits of igus® plastic bearings, flexible cables and cable carriers. Interested in seeing what we offer firsthand? Request a show to come to you!</h2>
       <form>
         <input type="text" placeholder="First name" class="two-column" />
         <input type="text" placeholder="Last name" class="two-column" />
@@ -48,8 +48,8 @@
     </div>
     <div class="middle-right-content">
       <h3>What is the igus traveling tradeshow?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>The traveling trade show is completely customized to your needs. It can be setup outdoors with an igus<span style="font-size: 10px"><sup>®</sup></span>  trailer or indoors—both options include a full set-up.</p>
+      <p>New components and components relevant to your company are displayed, with multiple salespeople available for one-on-one conversations. It is ideal for small and large groups alike, and visitors can participate for as long as their time allows. We also provide food, beverages and free product samples. </p>
     </div>
     <div class="map">
       <h3>We're coming to a city near you!</h3>
@@ -100,39 +100,37 @@
     </div>
     <div class="tile-intro">
       <h3>Wondering what we're bringing on the tradeshow?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Our business is centered around four main product lines: energy chain cable carrier systems, chainflex® continuous-flex cables, iglide® self-lubricating bearings and drylin® linear technology. We also offer robotic components, 3D printing services, bar stock and more. These products are extensively tested at our German headquarters in the industry’s largest test laboratory for optimal performance. Over 200,000 end users around the world are reaping the benefits of igus® solutions—see why for yourself at a trade show! </p>
     </div>
     <div class="tiles">
       <div class="e-chain tile float-left">
         <center><img src="img/echain_tile.png" /></center>
         <h4>enery chains</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
+        <p>energy chain cable carriers guide, protect and support cables and hoses while minimizing downtime and extending service life. </p>
         <p class="cta">Learn more</p>
       </div>
       <div class="chainflex tile float-left">
         <center><img src="img/chainflex_tile.png" /></center>
         <h4>chainflex cables</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
+        <p>chainflex<span style="font-size: 10px"><sup>®</sup></span> cables are durable, reliable, and built for moving applications. Available in bulk stock with no min lengths! </p>
         <p class="cta">Learn more</p>
       </div>
       <div class="drylin tile float-left">
         <center><img src="img/drylin_tile.png" /></center>
         <h4>drylin linear guides</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
+        <p>drylin<span style="font-size: 10px"><sup>®</sup></span> plastic bearings linear are self-lubricating, corrosion-resistant and shock-resistant, among other advantages. </p>
         <p class="cta">Learn more</p>
       </div>
       <div class="iglide tile float-left">
         <center><img src="img/iglide_tile.png" /></center>
         <h4>iglide bearings</h4>
-        <p>Lorem ipsum dolor sit amet, elit, sed do eiusmod tempor incididunt ut labore Lorem ipsum dolor sit amet, elit.</p>
+        <p>iglide<span style="font-size: 10px"><sup>®</sup></span> plastic bearings are tribologically-optimized and self-lubricating, making them completely maintenance-free. </p>
         <p class="cta">Learn more</p>
       </div>
     </div>
     <div class="bottom-form">
       <h3>Interested in the tradeshow coming to you?</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua.</p>
+      <p>Let us know! Simply submit your contact information below and we’ll reach out to you to begin organizing the event. We make it easy for you—we create save-the-date flyers to distribute to your company, and will manage planning from start to finish. </p>
       <form>
         <input type="text" placeholder="First name" class="two-column" />
         <input type="text" placeholder="Last name" class="two-column" />
