removing menu from mobile

--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="tts.js"></script>
   <link rel="stylesheet" type="text/css" href="tts.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
   <div class="container">
     <div class="nav">
-      <div class="about float-left">About</div>
-      <div class="tour-stops float-left">Tour Stops</div>
-      <div class="products float-left">Products</div>
-      <div class="contact float-left">Contact</div>
+      <a class="about float-left">About</a>
+      <a class="tour-stops float-left">Tour Stops</a>
+      <a class="products float-left">Products</a>
+      <a class="contact float-left">Contact</a>
+  </a>
     </div>
     <div class="top-left-content">
       <img src="img/iguslogo.png" />
       <h1>Ready to discover the power of plastic?</h1>
-      <h2>We’re packing up and hitting the road to show the country the benefits of igus® plastic bearings, flexible cables and cable carriers. Interested in seeing what we offer firsthand? Request a show to come to you!</h2>
+      <h2>We’re packing up and hitting the road to show the country the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> plastic bearings, flexible cables and cable carriers. Interested in seeing what we offer firsthand? Request the show to come to you!</h2>
       <form>
         <input type="text" placeholder="First name" class="two-column" />
         <input type="text" placeholder="Last name" class="two-column" />
