Adding opt-in to form

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         <input type="text" placeholder="City" class="two-column" />
         <input type="text" placeholder="State" class="two-column" />
         <br />
+        <input type="checkbox" class="opt-in form1" name="opt-in"> <span class="opt-in form1 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
+        <br class="opt-in-br form1-br" />
         <input type="submit" value="Submit">
       </form>
     </div>
@@ -147,6 +149,8 @@
         <input type="text" placeholder="City" class="two-column" />
         <input type="text" placeholder="State" class="two-column" />
         <br />
+        <input type="checkbox" class="opt-in form2" name="opt-in"> <span class="opt-in form2 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
+        <br class="opt-in-br form2-br" />
         <input type="submit" value="Submit">
       </form>
     </div>
