--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <br />
         <input type="checkbox" class="opt-in form1" name="opt-in"> <span class="opt-in form1 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
         <br class="opt-in-br form1-br" />
-        <input type="submit" value="Submit">
+        <input type="submit" class="submit" value="Submit">
       </form>
     </div>
     <div class="top-right-content">
@@ -151,7 +151,7 @@
         <br />
         <input type="checkbox" class="opt-in form2" name="opt-in"> <span class="opt-in form2 form-text">Please send me future relevant information about igus<span style="font-size: 8px"><sup>®</sup></span></span>
         <br class="opt-in-br form2-br" />
-        <input type="submit" value="Submit">
+        <input type="submit" class="submit" value="Submit">
       </form>
     </div>
   </div>
