few changes to form and text

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="tile-intro">
       <h3>Wondering what we're bringing on the tradeshow?</h3>
-      <p>Our business is centered around four main product lines: energy chain cable carrier systems, chainflex® continuous-flex cables, iglide® self-lubricating bearings and drylin® linear technology. We also offer robotic components, 3D printing services, bar stock and more. These products are extensively tested at our German headquarters in the industry’s largest test laboratory for optimal performance. Over 200,000 end users around the world are reaping the benefits of igus® solutions—see why for yourself at a trade show! </p>
+      <p>Our business is centered around four main product lines: energy chain cable carrier systems, chainflex<span style="font-size: 10px"><sup>®</sup></span> continuous-flex cables, iglide<span style="font-size: 10px"><sup>®</sup></span> self-lubricating bearings and drylin<span style="font-size: 10px"><sup>®</sup></span> linear technology. We also offer robotic components, 3D printing services, bar stock and more. These products are extensively tested at our German headquarters in the industry’s largest test laboratory for optimal performance. Over 200,000 end users around the world are reaping the benefits of igus<span style="font-size: 10px"><sup>®</sup></span> solutions—see why for yourself at a trade show! </p>
     </div>
     <div class="tiles">
       <div class="e-chain tile float-left">
@@ -115,7 +115,7 @@
       <div class="chainflex tile float-left">
         <center><img src="img/chainflex_tile.png" /></center>
         <h4>chainflex cables</h4>
-        <p>chainflex<span style="font-size: 10px"><sup>®</sup></span> cables are durable, reliable, and built for moving applications. Available in bulk stock with no min lengths! </p>
+        <p>chainflex<span style="font-size: 10px"><sup>®</sup></span> cables are durable, reliable, and built for moving applications. Available in bulk stock with no min. lengths! </p>
         <p class="cta">Learn more</p>
       </div>
       <div class="drylin tile float-left">
